# Plumbus-VM

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  isa.yaml
.cache/clangd/index/: gmock-actions.h.AEA6124A77BDC632.idx  gmock-all.cc.3CD10B6E611411B5.idx  gmock-cardinalities.cc.E4C1D67527E3D21D.idx  gmock-cardinalities.h.C80357A062796495.idx  gmock-function-mocker.h.CEC91F29A8E583D3.idx  gmock-generated-actions.h.B514A9E359096D85.idx  gmock-internal-utils.cc.11D816FA7558C05F.idx  gmock-internal-utils.h.1A8988DC9811A009.idx  gmock-matchers.cc.A004B0C66E9AE74A.idx  gmock-matchers.h.5886D6722298BDB6.idx  gmock-matchers.h.F950D57A86E56116.idx  gmock-more-actions.h.1C2AADABA883E2FF.idx  gmock-more-matchers.h.EE3DB670C4CA5E82.idx  gmock-nice-strict.h.1C670B1E2E97A46C.idx  gmock-port.h.B66A0AFD478FC4FB.idx  gmock-port.h.CF39B185E80316BE.idx  gmock-pp.h.3A8116C5EF094423.idx  gmock-spec-builders.cc.DABD614DE082D3A0.idx  gmock-spec-builders.h.016A38C059CD3559.idx  gmock.cc.FFC742D9EEE01782.idx  gmock.h.C193349B13A7D885.idx  gmock_main.cc.140E75786E451A20.idx  gtest-all.cc.605D4A0DA77E9513.idx  gtest-assertion-result.cc.4AE2B2D6C36B0240.idx  gtest-assertion-result.h.B4B10E3B73ED6C45.idx  gtest-death-test-internal.h.B3E50FD3CDE7B66B.idx  gtest-death-test.cc.2A0F70EA9DDDEDAB.idx  gtest-death-test.h.739F36B81BDBBB21.idx  gtest-filepath.cc.D11C1C909B4BB349.idx  gtest-filepath.h.711E8D4F734B7CBF.idx  gtest-internal-inl.h.AC607150ACB87974.idx  gtest-internal.h.D5842ADDECB5ACB8.idx  gtest-matchers.cc.7B2E6693035F45BD.idx  gtest-matchers.h.D8C7301D01F25BD5.idx  gtest-message.h.B88917794A59BB78.idx  gtest-param-test.h.C19CA8FA4C6F479F.idx  gtest-param-util.h.2FFED49012C61229.idx  gtest-port-arch.h.B154C5146905B5F9.idx  gtest-port.cc.C08A82108B56B0A6.idx  gtest-port.h.016F4E6F4070E14D.idx  (+18 more)
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml  statan.yml
ci/: Dockerfile
cmake/: comp-flags.cmake  jinja-gen.cmake  list-dirs.cmake  upd-tar-list.cmake
include/common/: common.hpp  config.hpp  instruction-generated.hpp.j2  instruction.hpp  instruction.hpp.j2  template-magic.hpp  value.hpp
include/decoder/: decoder.hpp
include/executor/: executor.hpp  handlers-generated.hpp.j2  handlers.hpp.j2  regfile.hpp
include/interpreter/: handlers.hpp.j2  interpreter.hpp  value.hpp
include/memory/: memory.hpp  regfile.hpp
include/objects/: objects.hpp
src/: CMakeLists.txt  decoder-gen.py
src/common/: CMakeLists.txt  value.cpp
src/decoder/: CMakeLists.txt  decoder-generated.cpp.j2  decoder.cpp  decoder.cpp.j2
src/executor/: CMakeLists.txt  executor-generated.cpp.j2  executor.cpp  executor.cpp.j2  regfile.cpp
src/interpreter/: CMakeLists.txt  handlers.cpp  interpreter.cpp  interpreter.cpp.j2  run.cpp.j2  value.cpp
src/memory/: CMakeLists.txt  memory.cpp  regfile.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/common/: CMakeLists.txt  value.cpp
test/unit/interpreter/: CMakeLists.txt  arr.cpp  call.cpp  cycle.cpp  handlers.cpp  square-eq.cpp
tools/: CMakeLists.txt
tools/pvm/: CMakeLists.txt  main.cpp
