add_library(pvm-utest-settings INTERFACE)
target_link_libraries(pvm-utest-settings INTERFACE pvm-settings gtest_main)

macro(pvm_add_test TEST SOURCES)
  add_executable(${TEST} ${SOURCES})
  target_link_libraries(${TEST} PRIVATE pvm-utest-settings)
  add_test(NAME ${TEST} COMMAND ${TEST} --gtest_color=yes)
  set_property(TEST ${TEST} PROPERTY LABELS unit)
endmacro()

set(DIRS interpreter common)
foreach(DIR ${DIRS})
  add_subdirectory(${DIR})
  message(STATUS "Included subdirectory: ${DIR}")
endforeach()
